--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy": "ng b --prod --base-href https://github.com/vigneshs0206/portfolio && npx ngh --dir=docs"
+    "deploy": "ng b --prod --base-href  https://vigneshs0206.github.io/portfolio && npx ngh --dir=docs"
   },
   "private": true,
   "dependencies": {
